# air-condition-microservices

./: .dockerignore  Makefile  README.md  docker-compose.yml
docker/: apiGateway.Dockerfile  pollutionService.Dockerfile
src/apiGateway/: .env.dist  .env.example  app.py  pyproject.toml
src/apiGateway/api/: air_condition.py  http_helpers.py  message_queue.py
src/apiGateway/api/consumers/: air:pollution:consumer.py
src/apiGateway/api/exceptions/: validation.py
src/apiGateway/api/services/: message_queue.py
src/apiGateway/services/: cache.py
src/apiGateway/settings/: base.py
src/pollutionService/: .env.dist  .env.example  pyproject.toml
src/pollutionService/project/: celery.py  settings.py
src/pollutionService/src/pollution/: apps.py  documents.py  models.py  tasks.py
src/pollutionService/src/pollution/application/: clients.py  commands.py  consumers.py  handlers.py  message_queue.py  producers.py  queries.py  query_handlers.py
src/pollutionService/src/pollution/domain/: entities.py  repositories.py
src/pollutionService/src/pollution/management/commands/: air:pollution:consumer.py
src/pollutionService/src/pollution/migrations/: 0001_initial.py  0002_rename_body_airpollution_data.py
src/pollutionService/src/seedwork/: deserializers.py  domain.py  repo.py  serializers.py  test_utils.py  types.py
src/pollutionService/src/seedwork/application/: bus.py  conf.py  interfaces.py  types.py
src/pollutionService/src/seedwork/decorators/: adapter.py
